# overlearn

./: .dockerignore  .eslintignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  DARK_MODE.md  DESIGN_SYSTEM.md  Dockerfile  FLASHCARDS_IMPLEMENTATION.md  OVERVIEW_IMPLEMENTATION.md  PLANO_IA.md  README.md  ROADMAP_ATUALIZADO.md  SISTEMA_FLASHCARDS.md  TESTES_FLASHCARDS.md  TESTES_IA_FLASHCARDS.md  docker-compose.yml  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  time-manipulation-method.md
.husky/: README.md  commit-msg  example.md  pre-commit  pre-push
docs/: CHECKLIST.md  DEPLOYMENT.md  IMPLEMENTATION-SUMMARY.md  TAURI-SETUP.md  VERSION-MANAGEMENT.md  improve-code-quality-progress.md  time-manipulation-method.md
prisma/: dev.db  schema.prisma  seed.ts
prisma/migrations/20251010015216_init/: migration.sql
prisma/migrations/20251011185756_add_task_calendar_fields/: migration.sql
scripts/: build-all.sh  bump-version.sh  check-tauri-ready.sh  install-tauri-deps.sh  quick-deploy.sh  setup-systemd.sh  setup-tauri-icons.sh
src/: middleware.ts  proxy.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  notifications.rs  tray.rs
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/calendar/: page.tsx
src/app/concepts/: page.tsx
src/lib/: prisma-queries.ts  tauri.ts
src/styles/: design-tokens.css
systemd/: overlearn-user.service  overlearn.service
(+144 files in other folders)
